--- a/Taste/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Taste/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,7 +12,15 @@
                 <div class="card-body px-lg-5 pt-4">
                     <form method="post" autocomplete="off" asp-route-returnUrl="@Model.ReturnUrl">
                         <h3 class="col-12 text-success text-center py-4">
-                            <strong>Sign Up</strong>
+                            @if (User.IsInRole(SD.ManagerRole))
+                            {
+                                <strong> Register Employee </strong>
+                            }
+                            else
+                            {
+                                <strong>Sign Up</strong>
+                            }
+                          
                         </h3>
                         <hr>
                         <div class="form-row py-2">
@@ -67,45 +75,46 @@
 
 
                     </form>
+                    @if (!User.IsInRole(SD.ManagerRole))
+                    {
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <p class="text-center">
+                                By clicking <em>Register</em> you agree to our <a href="" target="_blank"> terms and conditions </a>
+                            </p>
+                            <hr/>
+                            <div class="row">
 
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <p class="text-center">
-                            By clicking <em>Register</em> you agree to our <a href="" target="_blank"> terms and conditions </a>
-                        </p>
-                        <hr />
-                        <div class="row">
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    //if provider is meet, provide the icon
 
-                            @foreach (var provider in Model.ExternalLogins)
-                            {
-                                //if provider is meet, provide the icon
-
-                                <div class="col-6">
-                                    @if (provider.Name.ToLower().Contains("facebook"))
-                                    {
-
-                                        <button type="submit" class="btn btn-block facebook-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square"></i> Sign up with @provider.DisplayName</button>
-                                    }
-                                    else
-                                    {
-                                        @if (provider.Name.ToLower().Contains("micro"))
+                                    <div class="col-6">
+                                        @if (provider.Name.ToLower().Contains("facebook"))
                                         {
-                                            <button type="submit" class="btn btn-block microsoft-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-windows"></i> Sign up with @provider.DisplayName</button>
-                                        }
 
+                                            <button type="submit" class="btn btn-block facebook-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square"></i> Sign up with @provider.DisplayName</button>
+                                        }
                                         else
                                         {
-                                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                            @if (provider.Name.ToLower().Contains("micro"))
+                                            {
+                                                <button type="submit" class="btn btn-block microsoft-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-windows"></i> Sign up with @provider.DisplayName</button>
+                                            }
 
+                                            else
+                                            {
+                                                <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+
+                                            }
                                         }
-                                    }
 
 
-                                </div>
-                            }
+                                    </div>
+                                }
 
-                        </div>
-                    </form>
-
+                            </div>
+                        </form>
+                    }
 
 
                     <hr>
